doing very bad code

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,7 +8,29 @@
     <link rel="stylesheet" href="style.css">
     <title>EYAS</title>
 </head>
+
 <body>
-    <h1>Hello World</h1>
+    <section class="banner-section">
+        <div class="banner-main">
+            <h1 class="banner-title">Let’s Help Those Who Are <br> More In Need</h1>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Hic non sequi nostrum quis, aliquam nobis
+                officiis
+                ea aliquid debitis dicta id. Ex tenetur natus voluptatibus?</p>
+            <a href="#">Donate now</a>
+        </div>
+    </section>
+
+    <section>
+        <h1>Donate today</h1>
+        <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo populo animal noluisse, enim</p>
+        <div class="donation-amount">
+            <div class="amount-item">100tk</div>
+            <div class="amount-item">200tk</div>
+            <div class="amount-item">500tk</div>
+            <div class="amount-item">1000tk</div>
+            <div class="amount-item">5000tk</div>
+        </div>
+    </section>
 </body>
+
 </html>
