donation section done

--- a/index.html
+++ b/index.html
@@ -16,19 +16,25 @@
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Hic non sequi nostrum quis, aliquam nobis
                 officiis
                 ea aliquid debitis dicta id. Ex tenetur natus voluptatibus?</p>
-            <a href="#">Donate now</a>
+            <a class="link-button" href="#">Donate now</a>
         </div>
     </section>
 
-    <section>
-        <h1>Donate today</h1>
-        <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo populo animal noluisse, enim</p>
-        <div class="donation-amount">
-            <div class="amount-item">100tk</div>
-            <div class="amount-item">200tk</div>
-            <div class="amount-item">500tk</div>
-            <div class="amount-item">1000tk</div>
-            <div class="amount-item">5000tk</div>
+    <section class="donation-section">
+        <div class="">
+            <h1>Donate today</h1>
+            <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo populo
+                animal noluisse, enim</p>
+            <div class="donation-amount">
+                <div class="amount-item">100tk</div>
+                <div style="border: 2px solid tomato; background-color: #FFEEEE; color: #FF5959;" class="amount-item">
+                    200tk</div>
+                <div class="amount-item">500tk</div>
+                <div class="amount-item">1000tk</div>
+                <div class="amount-item">5000tk</div>
+            </div>
+            <input class="input-field" type="text" name="" placeholder="Other Amount (Taka)" id="">
+            <a class="link-button" href="#">Donate Now</a>
         </div>
     </section>
 </body>
