donation plan section is done

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
     </section>
 
     <section class="donation-section">
-        <div class="">
-            <h1>Donate today</h1>
+        <div class="container">
+            <h1 class="section-heading">Donate today</h1>
             <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo populo
                 animal noluisse, enim</p>
             <div class="donation-amount">
@@ -35,6 +35,34 @@
             </div>
             <input class="input-field" type="text" name="" placeholder="Other Amount (Taka)" id="">
             <a class="link-button" href="#">Donate Now</a>
+        </div>
+    </section>
+
+    <section>
+        <div class="container">
+            <h1 class="section-heading">Our Donation Plan</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum assumenda, minima dolore, dolor distinctio
+                corrupti expedita dolorem, et pariatur veritatis corporis suscipit! Rerum, non excepturi.</p>
+            <div class="plan-main">
+                <div class="plan-items">
+                    <img src="icons/food.png" alt="">
+                    <h3>Food For a Family</h3>
+                    <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat
+                        duis enim velit mollit.</p>
+                </div>
+                <div style="background-color: rgba(255, 89, 89, 0.1);" class="plan-items">
+                    <img src="icons/shelter.png" alt="">
+                    <h3>Shelter for a family</h3>
+                    <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat
+                        duis enim velit mollit.</p>
+                </div>
+                <div style="background-color: rgba(89, 255, 89, 0.1);;" class="plan-items">
+                    <img src="icons/Frame-1.png" alt="">
+                    <h3>Education for a child</h3>
+                    <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat
+                        duis enim velit mollit.</p>
+                </div>
+            </div>
         </div>
     </section>
 </body>
