almost completed the project

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
         </div>
     </section>
 
-    <section class="donation-section">
-        <div class="container">
+    <section class="flexible-section">
+        <div>
             <h1 class="section-heading">Donate today</h1>
             <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo populo
                 animal noluisse, enim</p>
@@ -33,13 +33,13 @@
                 <div class="amount-item">1000tk</div>
                 <div class="amount-item">5000tk</div>
             </div>
-            <input class="input-field" type="text" name="" placeholder="Other Amount (Taka)" id="">
+            <input type="text" name="" placeholder="Other Amount (Taka)" id="">
             <a class="link-button" href="#">Donate Now</a>
         </div>
     </section>
 
-    <section>
-        <div class="container">
+    <section class="flexible-section">
+        <div>
             <h1 class="section-heading">Our Donation Plan</h1>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum assumenda, minima dolore, dolor distinctio
                 corrupti expedita dolorem, et pariatur veritatis corporis suscipit! Rerum, non excepturi.</p>
@@ -65,6 +65,46 @@
             </div>
         </div>
     </section>
+
+    <section class="flexible-section">
+        <div class="join-form">
+            <h1 class="section-heading">Join Us</h1>
+            <div>
+                <div>
+                <input type="text" name="" placeholder="Your Name" id="">
+                </div>
+                <div>
+                   <input type="email" name="" placeholder="Your Email" id="">
+                </div>
+                <div>
+                 <input type="password" name="" placeholder="Your Password" id="">
+                </div>
+                <div>
+                    <a class="link-button" target="_blank" href="#">JOIN NOW</a>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="flexible-section">
+        <div>
+            <h1 class="section-heading">Get My Updates</h1>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quod magni veniam, atque iste eveniet quae,
+                amet consequuntur obcaecati nihil debitis laudantium asperiores! Iusto, nam possimus?</p>
+            <div class="input-field">
+                <form action="">
+                    <input type="text" name="" placeholder="Email" id="">
+                </form>
+            </div>
+        </div>
+    </section>
+
+    <footer>
+        <div>
+            <h1>Bee Humble</h1>
+            <p>I'm Gonna Do It</p>
+        </div>
+    </footer>
 </body>
 
 </html>
