assingnment is done

--- a/index.html
+++ b/index.html
@@ -10,21 +10,20 @@
 </head>
 
 <body>
+    <!-- Banner Section -->
     <section class="banner-section">
         <div class="banner-main">
             <h1 class="banner-title">Let’s Help Those Who Are <br> More In Need</h1>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Hic non sequi nostrum quis, aliquam nobis
-                officiis
-                ea aliquid debitis dicta id. Ex tenetur natus voluptatibus?</p>
+            <p>In order to leverage the programs, a nonprofit’s donors typically must submit a matching gift form to their employers. The form essentially allows an individual to provide details about their own qualifying donation and request an associated corporate match.</p>
             <a class="link-button" href="#">Donate now</a>
         </div>
     </section>
 
+    <!-- Donatin Section -->
     <section class="flexible-section">
         <div>
             <h1 class="section-heading">Donate today</h1>
-            <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo populo
-                animal noluisse, enim</p>
+            <p> leverage the programs, a nonprofit’s donors typically must submit a matching gift form to their employers. The form essentially allows an individual to provide details about their own qualifying donation and request an associated corporate match.</p>
             <div class="donation-amount">
                 <div class="amount-item">100tk</div>
                 <div style="border: 2px solid tomato; background-color: #FFEEEE; color: #FF5959;" class="amount-item">
@@ -38,67 +37,67 @@
         </div>
     </section>
 
+    <!-- Donation Plan Section -->
     <section class="flexible-section">
         <div>
             <h1 class="section-heading">Our Donation Plan</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum assumenda, minima dolore, dolor distinctio
-                corrupti expedita dolorem, et pariatur veritatis corporis suscipit! Rerum, non excepturi.</p>
+            <p> donors typically must submit a matching gift form to their employers. The form essentially allows an inrporate match.</p>
             <div class="plan-main">
                 <div class="plan-items">
                     <img src="icons/food.png" alt="">
                     <h3>Food For a Family</h3>
-                    <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat
-                        duis enim velit mollit.</p>
+                    <p>In order to leverage the programs, a nonprofit’s donors typically must submit a a about their own qualifying donation and request an associated corporate match.</p>
                 </div>
                 <div style="background-color: rgba(255, 89, 89, 0.1);" class="plan-items">
                     <img src="icons/shelter.png" alt="">
                     <h3>Shelter for a family</h3>
-                    <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat
-                        duis enim velit mollit.</p>
+                    <p>Corporate matching gifts can offer a significant revenue source forcharitable organizations. In order to leverage the programs, a nonprofit’s donors typicgift form to their employers. The form essentially allows an individual to pmatch.</p>
                 </div>
                 <div style="background-color: rgba(89, 255, 89, 0.1);;" class="plan-items">
                     <img src="icons/Frame-1.png" alt="">
                     <h3>Education for a child</h3>
-                    <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat
-                        duis enim velit mollit.</p>
+                    <p>Corporate matching gifts can offer a significant revenue source for charitable organizations. In order to leverage the programs, a nonprofit’s donorporate match.</p>
                 </div>
             </div>
         </div>
     </section>
 
+    <!-- Join Us Section -->
     <section class="flexible-section">
         <div class="join-form">
             <h1 class="section-heading">Join Us</h1>
             <div>
                 <div>
-                <input type="text" name="" placeholder="Your Name" id="">
+                    <input type="text" name="" placeholder="Your Name" id="">
                 </div>
                 <div>
-                   <input type="email" name="" placeholder="Your Email" id="">
+                    <input type="email" name="" placeholder="Your Email" id="">
                 </div>
                 <div>
-                 <input type="password" name="" placeholder="Your Password" id="">
+                    <input type="password" name="" placeholder="Your Password" id="">
                 </div>
-                <div>
-                    <a class="link-button" target="_blank" href="#">JOIN NOW</a>
+                <div class="join-button">
+                    <a class="link-button"target="_blank" href="#">JOIN NOW</a>
                 </div>
             </div>
         </div>
     </section>
 
+    <!-- Updates Section -->
     <section class="flexible-section">
         <div>
             <h1 class="section-heading">Get My Updates</h1>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quod magni veniam, atque iste eveniet quae,
-                amet consequuntur obcaecati nihil debitis laudantium asperiores! Iusto, nam possimus?</p>
+            <p>Corporate matching gifts can offer a significant revenue source for charitable organizations. In order to leverage the programs, a nonprofit’s donors typically must submit a matching gift form to their employers. The form essentially allows an individual to provide details about their own qualifying donation and request an associated corporate match.</p>
             <div class="input-field">
                 <form action="">
-                    <input type="text" name="" placeholder="Email" id="">
+                    <input class="updated-input" type="text" name="" placeholder="Email" id="">
+                    <input class="link-button" type="submit" value="Subscribe">
                 </form>
             </div>
         </div>
     </section>
 
+    <!-- Footer Section -->
     <footer>
         <div>
             <h1>Bee Humble</h1>
